--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1>HELLO, WORLD!</h1>
-    </body>
-</html>
+{% extends "layout.html" %}
+
+{% block head %}
+  
+{% endblock %}
+
+{% block body %}
+  <h1>Template inheritance</h1>
+{% endblock %}
