--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </table>
     
     <form action="/" method="post">
-        <input type="text" name="content" id="content">
+        <input type="text" name="content">
         <input type="submit" value="Add Task">
     </form>
 </div>
