--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,11 @@
     
     <form action="/" method="post">
         <input type="text" name="content">
-        <input type="submit" value="Add Task">
+        <div class="submit">
+            <input type="submit" value="Add Task">
+        </div>
     </form>
+
+    <div class="logout"><a href="{{ url_for('logout') }}">Logout</a></div>
 </div>
 {% endblock %}
