--- a/templates/update.html
+++ b/templates/update.html
@@ -1,16 +1,20 @@
 {% extends "layout.html" %}
 
 {% block head %}
-<title>Task Master</title>
+    <title>Update Task</title>
 {% endblock %}
 
 {% block body %}
 <div class="content">
-    <h1>Update Task</h1>
+    <h1 class="update_heading">Update Task</h1>
 
     <form action="/update/{{ task.id }}" method="post">
         <input type="text" name="content" value="{{task.content}}">
-        <input type="submit" value="Update">
+        <div class="submit">
+            <input type="submit" value="Update">
+        </div>
     </form>
+
+    <div class="logout"><a href="{{ url_for('logout') }}">Logout</a></div>   
 </div>
 {% endblock %}
